# courtreserve-booking

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  book_court_santa_clara.py  book_court_sunnyvale.py  build_and_push.sh  pyproject.toml
.claude/commands/: deploy.md
webapp/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  test-availability.ts  test-phase2.ts  test-unpaid-api.ts  vitest.config.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/accounts/: page.tsx
webapp/app/api/accounts/: route.ts
webapp/app/api/accounts/[id]/: route.ts
webapp/app/api/accounts/test/: route.ts
webapp/app/api/booking-jobs/: route.ts
webapp/app/api/booking-jobs/[id]/: route.ts
webapp/app/api/notifications/test/: route.ts
webapp/app/api/reservations/: route.ts
webapp/app/booking-jobs/: page.tsx
webapp/app/booking-jobs/__tests__/: handle-edit.test.ts
webapp/app/booking-jobs/components/: DurationRangePicker.tsx  JobCard.tsx  SchedulerStatus.tsx  TimePreferencePicker.tsx
webapp/app/reservations/: page.tsx
webapp/lib/: logger.ts  notifications.ts  scheduler.ts
webapp/lib/courtreserve/: api.ts  auth.ts  client.ts  index.ts  time-utils.ts  types.ts
webapp/lib/scheduler/: index.ts  job-processor.ts  lock-manager.ts  noon-mode.ts  polling-mode.ts  scheduler.ts  types.ts
webapp/lib/scheduler/__tests__/: min-notice-hours.test.ts
webapp/prisma/: schema.prisma
webapp/scripts/: migrate-schema.ts  start-scheduler.ts
(+5 files in other folders)
