[project]
name = "courtreserve-bot"
version = "0.1.0"
description = "Automated CourtReserve court-booking helper"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "lxml"
]

[tool.setuptools]
py-modules = ["book_court_sunnyvale", "book_court_santa_clara"]
